add fb authorization
