# src/FeaturesEnabled.ClaimBased.AutoSwagger.Api.json
@@ -97,6 +97,51 @@
         }
       }
     },
+    "/api/v{version}/authorize/Login": {
+      "post": {
+        "tags": [
+          "Authorize"
+        ],
+        "operationId": "Authorize_Login",
+        "parameters": [
+          {
+            "name": "version",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "x-position": 2
+          }
+        ],
+        "requestBody": {
+          "x-name": "model",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/LoginRequest"
+              }
+            }
+          },
+          "required": true,
+          "x-position": 1
+        },
+        "responses": {
+          "201": {
+            "description": ""
+          },
+          "400": {
+            "description": ""
+          },
+          "404": {
+            "description": ""
+          },
+          "500": {
+            "description": ""
+          }
+        }
+      }
+    },
     "/api/v{version}/Products": {
       "get": {
         "tags": [
